--- a/2019.html
+++ b/2019.html
@@ -13,45 +13,264 @@
     <title>The Adjoint School</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html">The Adjoint School</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="apply.html">Apply</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-                <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-                <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+      <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav><nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
+
 
 
       <main role="main" class="container">
 
     <h1>The Adjoint School 2019</h1>
 
-    <p>The 2019 Adjoint School was held in Oxford</p>
-    
+    <p>
+        The 2019 Adjoint School featured projects mentored by Miriam Backens, Tobias Fritz, Pieter Hofstra, Bartosz Milewski, Mehrnoosh Sadrzadeh, and David Spivak. It was organised by Daniel Cicala and Jules Hedges. The research week was held at Oxford in July 2019.
+    </p>
+
+    <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-8">
+        <img src="images/2018-group.jpg" class="rounded img-fluid group"></img>
+    </div>
+    <div class="col-md-2">
+    </div>
+</div>
+
+    <hr></hr>
+
+    <h2> Research Projects </h2>
+    <div class = "row">
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Simplifying quantum circuits using the ZX-calculus </h5>
+                    <p> <i> Mentored by Miriam Backens </i></p>
+                </center>
+                <p>
+                    The ZX-calculus is a graphical calculus based on the category-theoretical formulation of quantum mechanics.  A complete set of graphical rewrite rules is known for the ZX-calculus, but not for quantum circuits over any universal gate set.  In this project, we aim to develop new strategies for using the ZX-calculus to simplify quantum circuits.
+                </p>
+
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Partial evaluations, the bar construction, and second-order stochastic dominance </h5>
+                    <p> <i> Mentored by Tobias Fritz </i></p>
+                </center>
+                <p>
+                    We all know that 2+2+1+1 evaluates to 6. A less familiar notion is that it can *partially evaluate* to 5+1.  In this project, we aim to study the compositional structure of partial evaluation in terms of monads and the bar construction and see what this has to do with financial risk via second-order stochastic dominance.
+                </p>
+
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+    </div>
+
+    <div class = "row">
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5> Complexity classes, computation, and Turing categories     </h5>
+                    <p> <i> Mentored by  Pieter Hofstra </i></p>
+                </center>
+                <p>
+Turing categories form a categorical setting for studying computability without bias towards any particular model of computation. It is not currently clear, however, that Turing categories are useful to study practical aspects of computation such as complexity. This project revolves around the systematic study of step-based computation in the form of stack-machines, the resulting Turing categories, and complexity classes.  This will involve a study of the interplay between traced monoidal structure and computation. We will explore the idea of stack machines qua programming languages, investigate the expressive power, and tie this to complexity theory. We will also consider questions such as the following: can we characterize Turing categories arising from stack machines? Is there an initial such category? How does this structure relate to other categorical structures associated with computability?
+                </p>
+
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Traversal optics and profunctors </h5>
+                    <p> <i> Mentored by  Bartosz Milewski</i></p>
+                </center>
+                <p>
+                    In functional programming, optics are ways to zoom into a specific part of a given data type and mutate it.  Optics come in many flavors such as lenses and prisms and there is a well-studied categorical viewpoint, known as profunctor optics.  Of all the optic types, only the traversal has resisted a derivation from first principles into a profunctor description. This project aims to do just this.
+                </p>
+
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+    </div>
+
+
+    <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5> Formal and experimental methods to reason about dialogue and discourse using categorical models of vector spaces</h5>
+                    <p> <i> Mentored by Mehrnoosh Sadrzadeh</i></p>
+                </center>
+                <p>
+                    Distributional semantics argues that meanings of words can be represented by the frequency of their co-occurrences in context. A model extending distributional semantics from words to sentences has a categorical interpretation via Lambek’s syntactic calculus or pregroups. In this project, we intend to further extend this model to reason about dialogue and discourse utterances where people interrupt each other, there are references that need to be resolved, disfluencies, pauses, and corrections. Additionally, we would like to design experiments and run toy models to verify predictions of the developed models. 
+                </p>
+
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+    </div>
+
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Toward a mathematical foundation for autopoiesis </h5>
+                    <p> <i> Mentored by David Spivak </i></p>
+                </center>
+                <p>
+                    An autopoietic organization—anything from a living animal to a political party to a football team—is a system that is responsible for adapting and changing itself, so as to persist as events unfold. We want to develop mathematical abstractions that are suitable to found a scientific study of autopoietic organizations. To do this, we’ll begin by using behavioral mereology and graphical logic to frame a discussion of autopoeisis, most of all what it is and how it can be best conceived. We do not expect to complete this ambitious objective; we hope only to make progress toward it.
+                </p>
+
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+    </div>
+
+    <!-- <h2>Reading list</h2>
+    <ul>
+        <li>
+            Jan 8: A. Kissinger and S. Uijlen.
+            <a href="https://arxiv.org/abs/1701.04732">A categorical semantics for causal structure</a>
+            ,
+            <i>32nd Annual ACM/IEEE Symposium on Logic in Computer Science (LICS)</i>
+            , pp. 1-12, 2017
+        </li>
+        <li>
+            Jan 22: B. Coecke, M. Sadrzadeh, and S. Clark,
+            <a href="https://arxiv.org/abs/1003.4394">Mathematical foundations for a compositional distributional model of meaning</a>
+            ,
+            <i>Linguistic Analysis</i>
+             36(1-4), pp. 345-384, 2010.
+        </li>
+        <li>
+            Feb 5: A. Carboni and R.F.C. Walters.
+            <a href="http://www.sciencedirect.com/science/article/pii/0022404987901216">Cartesian bicategories I</a>
+            ,
+            <i>Journal of Pure and Applied Algebra</i>
+             49(1-2), pp.11-32, 1987.
+        </li>
+        <li>
+            Feb 19: B. Fong,
+            <a href="http://www.tac.mta.ca/tac/volumes/30/33/30-33abs.html">Decorated cospans</a>
+            ,
+            <i>Theory and Applications of Categories</i>
+             30, pp. 1096-1120, 2015.
+        </li>
+        <li>
+            Mar 5: J. Bolt, B. Coecke, F. Genovese, M. Lewis, D. Marsden, and R. Piedeleu.
+            <a href="https://arxiv.org/abs/1703.08314">
+                <i>Interacting Conceptual Spaces I: Grammatical Composition of Concepts</i>
+            </a>
+            , arXiv preprint, 2017.
+        </li>
+        <li>
+            Mar 19: J. Baez and B. Pollard,
+            <a href="http://www.worldscientific.com/doi/abs/10.1142/S0129055X17500283">A compositional framework for reaction networks</a>
+            ,
+            <i>Reviews in Mathematical Physics</i>
+             29:1750028, 2017.
+        </li>
+        <li>
+            Apr 2: J.C. Willems,
+            <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>
+            ,
+            <i>IEEE Control Systems</i>
+             27(6), pp. 46-99, 2007.
+        </li>
+        <li>
+            Apr 16: J. Henson, R. Lal, and M. Pusey,
+            <a href="http://iopscience.iop.org/article/10.1088/1367-2630/16/11/113043/meta">Theory-independent limits on correlations from generalised Bayesian networks</a>
+            ,
+            <i>New Journal of Physics</i>
+             27, 2014.
+        </li>
+    </ul>
+
+
+    <h2>Papers</h2>
+    Following the research week, the working groups produced the papers:
+    <ul>
+      <li>Hi there</li>
+    </ul> -->
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
